--- a/elasticluster/share/playbooks/roles/r/tasks/main.yml
+++ b/elasticluster/share/playbooks/roles/r/tasks/main.yml
@@ -1,9 +1,11 @@
 # r/tasks/main.yml
 ---
 
+#- name: Load distribution-specific parameters
+#include: 'init-{{ansible_os_family}}.yml'
+
 - name: Load distribution-specific parameters
   include: 'init-{{ansible_os_family}}.yml'
-
 
 - name: Install R packages
   package:
@@ -11,9 +13,35 @@
     state=present
   with_items: '{{r_packages}}'
 
+- name: Create R etc directory
+  become: true
+  file: path=/etc/R state=directory
 
 - name: Set default CRAN repository
+  become: true
   template:
     dest: '/etc/R/Rprofile.site'
     src: 'etc/R/Rprofile.site.j2'
     mode: 0444
+
+- name: Fix LD_LIBRARY_PATH for openmpi (needed for Rmpi) for bash
+  become: true
+  template:
+    dest: '/etc/profile.d/openmpi.sh'
+    src: 'etc/profile.d/openmpi.sh.j2'
+    mode: 0444
+
+- name: Install R MPI library with openmpi
+  become: true
+  command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('Rmpi' %in% installed.packages()[,'Package'])) install.packages('Rmpi', repos='https://cloud.r-project.org/', configure.args = c('--with-Rmpi-include=/usr/include/openmpi-x86_64/','--with-Rmpi-libpath=/usr/lib64/openmpi/lib','--with-Rmpi-type=OPENMPI','--with-mpi=/usr/lib64/openmpi'))"
+  environment:
+    LD_LIBRARY_PATH: "/usr/lib64/openmpi/lib"
+
+- name: Install additional useful R libraries
+  become: true
+  command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{item}}' %in% installed.packages()[,'Package'])) install.packages(pkgs='{{item}}', repos=c('https://cloud.r-project.org/'))"
+  with_items:
+    - mvtnorm
+    - mnormt
+    - doParallel
+    - snow
